Fix logic error and DOM initialization 2

--- a/index.html
+++ b/index.html
@@ -8,61 +8,24 @@
   <title>To Do List</title>
 </head>
 <body>
-  <div class="accordion accordion-flush" id="accordionFlushExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="flush-headingOne">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-          Accordion Item #1
-        </button>
-      </h2>
-      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="flush-headingTwo">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-          Accordion Item #2
-        </button>
-      </h2>
-      <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="flush-headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-          Accordion Item #3
-        </button>
-      </h2>
-      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-      </div>
-    </div>
-  </div>
-
-
-
-  <main class="container py-3">
+   <main class="container py-3">
     <h1 class="text-center">To Do List</h1>
     <button id="addtask-btn" class="btn btn-info">New Task</button>
     <form id="addtask-form" class="mt-4">
       <div class="form-group">
-        <input id="taskdate" class="form-control col-3" type="text" placeholder="Task Date" required/>
+        <input id="taskdate" class="form-control col-2" type="date" placeholder="Task Date" required/>
 
-        <input id="title" class="form-control col-6" type="text" placeholder="Title" required/>
+        <input id="title" class="form-control col-10" type="text" placeholder="Title" required/>
 
-        <input class="form-check-input col-1" id="completedStatus" type="checkbox"/>
-        <label for="completedStatus" class="form-check-label justify-content-end">Done</label>
       </div>
       <div class="form-group">
-        <input id="description" class="form-control" type="number" placeholder="Description" required/>
+        <input id="description" class="form-control" type="text" placeholder="Description" required/>
       </div>
       
 
       <div class="d-flex justify-content-end">
 
-        <button id="submit-btn" class="btn btn-success" type="submit">Task +</button>
+        <button id="submit-btn" class="btn btn-success" type="submit">Confirm</button>
       </div>
     </form>
     <div id="tasks-list" class="py-5">
