--- a/index.html
+++ b/index.html
@@ -5,34 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css" />
+  <script defer src="node_modules\@fortawesome\fontawesome-free\js\brands.js"></script>
+  <script defer src="node_modules\@fortawesome\fontawesome-free\js\solid.js"></script>
+  <script defer src="node_modules\@fortawesome\fontawesome-free\js\fontawesome.js"></script>
   <title>To Do List</title>
 </head>
 <body>
-   <main class="container py-3">
+   <main class="container py-3 bg-light">
     <h1 class="text-center">To Do List</h1>
-    <button id="addtask-btn" class="btn btn-info">New Task</button>
+    <div class="d-flex justify-content-between">
+      <button id="addtask-btn" class="btn btn-info">New Task<i class="fas fa-plus ml-2"></i></button>
+      <h1><i class="text-success fas fa-clipboard-list"></i></h1>
+    </div>
     <form id="addtask-form" class="mt-4">
       <div class="form-group">
         <input id="taskdate" class="form-control col-2" type="date" placeholder="Task Date" required/>
-
         <input id="title" class="form-control col-10" type="text" placeholder="Title" required/>
-
       </div>
       <div class="form-group">
         <input id="description" class="form-control" type="text" placeholder="Description" required/>
       </div>
-      
-
       <div class="d-flex justify-content-end">
-
-        <button id="submit-btn" class="btn btn-success" type="submit">Confirm</button>
+        <button id="submit-btn" class="btn btn-success" type="submit"><i class="fas fa-check-circle mr-2"></i>Confirm</button>
       </div>
     </form>
     <div id="tasks-list" class="py-5">
     </div>
   </main>
-
-
   <script src="assets/js/bundle.min.js"></script>
 </body>
 </html>
