--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <script defer src="node_modules\@fortawesome\fontawesome-free\js\fontawesome.js"></script>
   <title>To Do List</title>
 </head>
-<body>
-   <main class="container py-3 bg-light">
+<body class="col-md-8 m-auto">
+   <main class="container py-3">
     <h1 class="text-center">To Do List</h1>
     <div class="d-flex justify-content-between">
       <button id="addtask-btn" class="btn btn-info">New Task<i class="fas fa-plus ml-2"></i></button>
-      <h1><i class="text-success fas fa-clipboard-list"></i></h1>
+      <i class="text-success display-4 fas fa-clipboard-list"></i>
     </div>
     <form id="addtask-form" class="mt-4">
       <div class="form-group">
-        <input id="taskdate" class="form-control col-2" type="date" placeholder="Task Date" required/>
-        <input id="title" class="form-control col-10" type="text" placeholder="Title" required/>
+        <input id="taskdate" class="form-control col-3" type="date" placeholder="Task Date" required/>
+        <input id="title" class="form-control col-9" type="text" placeholder="Title" required/>
       </div>
       <div class="form-group">
         <input id="description" class="form-control" type="text" placeholder="Description" required/>
