--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </div>
     <form id="addtask-form" class="mt-4">
       <div class="form-group">
+        <div id="project-container"></div>
+      </div>
+      <div class="form-group">
         <input id="taskdate" class="form-control col-3" type="date" placeholder="Task Date" required/>
         <input id="title" class="form-control col-9" type="text" placeholder="Title" required/>
       </div>
