Edit opens up in form and confirm button modifies to update

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css" />
-  <script defer src="node_modules\@fortawesome\fontawesome-free\js\brands.js"></script>
-  <script defer src="node_modules\@fortawesome\fontawesome-free\js\solid.js"></script>
-  <script defer src="node_modules\@fortawesome\fontawesome-free\js\fontawesome.js"></script>
+  <script src="node_modules\@fortawesome\fontawesome-free\js\brands.js" defer></script>
+  <script src="node_modules\@fortawesome\fontawesome-free\js\solid.js" defer></script>
+  <script src="node_modules\@fortawesome\fontawesome-free\js\fontawesome.js" defer></script>
   <title>To Do List</title>
 </head>
 <body class="col-md-8 m-auto">
